# Arcade-Learning-Environment

./: CMakeCache.txt  CMakeLists.txt  Makefile  ale  cmake_install.cmake
doc/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.fifo  Makefile.sharedlibrary  ale_player.cpp  ale_player.hpp  ale_player_ri.cpp  ale_player_ri.hpp  cmake_install.cmake  fifoInterfaceExample.cpp  sharedLibraryInterfaceExample  sharedLibraryInterfaceExample.cpp  sharedLibraryInterfaceExample_client.cpp  sharedLibraryInterfaceExample_server.cpp
